--- a/media/redesign/stylus/structure.styl
+++ b/media/redesign/stylus/structure.styl
@@ -240,6 +240,7 @@ footer
 
 /* rtl */
 .html-rtl
+  /*
   #main-header
     .logo
       float right
@@ -259,4 +260,3 @@ footer
       compat-only(padding-right, 0)
       compat-only(margin-left, 8px)
       compat-only(margin-right, 0)
-      
