--- a/media/redesign/stylus/zones.styl
+++ b/media/redesign/stylus/zones.styl
@@ -27,6 +27,9 @@
     a, a:hover, a:focus, a:visited
       color #fff
 
+  .zone-image
+    background-repeat no-repeat
+
 .zone-landing
 
   h1
@@ -63,7 +66,6 @@
       font-size larger-font-size
       font-weight light-font-weight
       padding (2 * grid-spacing) 0 grid-spacing 0
-
 
   .zone-image
     position absolute
