Updates to the MDN homepage for the redesign

--- a/apps/demos/templates/demos/elements/submission_thumb.html
+++ b/apps/demos/templates/demos/elements/submission_thumb.html
@@ -1,3 +1,8 @@
+{% if is_homepage %}
+<li>
+<a href="{{ url('demos_detail', slug=submission.slug) }}"><img src="{{ submission.thumbnail_url(1) }}" alt="" width="{{thumb_width}}" height="{{thumb_height}}">{{ submission.title }}</a>
+</li>
+{% else %}
 <li class="demo{{extra_class.next()}} {{main_flag_class}}">
     <h2 class="demo-title">
         <a href="{{ url('demos_detail', slug=submission.slug) }}"><img src="{{ submission.thumbnail_url(1) }}" alt="" width="{{thumb_width}}" height="{{thumb_height}}">{{ submission.title }}</a>
@@ -25,3 +30,4 @@
       <p class="launch"><a href="{{ url('demos_launch', slug=submission.slug) }}" target="{{ "_blank" if submission.navbar_optout }}" class="button" title="{{ _('Launch {title}') | f(title=submission.title) }}">Launch</a></p>
     </div>
 </li>
+{% endif %}
