--- a/media/redesign/stylus/zones.styl
+++ b/media/redesign/stylus/zones.styl
@@ -9,8 +9,7 @@
   #main-header
     border-bottom-color rgba(255, 255, 255, 0.2)
 
-  #main-nav > ul > li > a, .user-state a
-    compat-important(color, #fff)
+  override-main-nav-color(#fff)
 
   .search-wrap
     create-gradient-background(rgba(255, 255, 255, 0.2))
