More homepage updates

--- a/apps/landing/templates/landing/homepage.html
+++ b/apps/landing/templates/landing/homepage.html
@@ -27,7 +27,7 @@
 
   <div class="home-search-form">
     <form action="{{ url('search') }}" method="get">
-      <input type="search" placeholder="{{ _('Search the docs') }}" />
+      <input type="search" name="q" placeholder="{{ _('Search the docs') }}" />
     </form>
   </div> 
 
