--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -40,7 +40,7 @@
         display block
 
     .home-search-form
-      padding (grid-spacing * 1.5) 0
+      padding (grid-spacing * 2) 0
 
       input
         display block
@@ -51,6 +51,9 @@
   .home-features
     &, a
       color #fff
+
+    a
+      text-decoration underline
 
     h3
       font-weight bold
