Adding initial imagery

--- a/apps/landing/templates/landing/homepage.html
+++ b/apps/landing/templates/landing/homepage.html
@@ -75,13 +75,13 @@
 <!-- callout area -->
 <div class="home-callouts"><div class="column-container center">
   <div class="column-callout callout-apps">
-    <a href="{{ devmo_url('apps') }}">{{ _('Create<br />Web Apps') }}</a>
+    <a href="{{ devmo_url('apps') }}"><span>{{ _('Create<br />Web Apps') }}</span><i></i></a>
   </div>
   <div class="column-callout callout-android">
-    <a href="{{ devmo_url('Mozilla/Firefox_for_Android') }}">{{ _('Develop<br />Firefox for Android') }}</a>
+    <a href="{{ devmo_url('Mozilla/Firefox_for_Android') }}"><span>{{ _('Develop<br />Firefox for Android') }}</span><i></i></a>
   </div>
   <div class="column-callout callout-firefoxos">
-    <a href="/en-US/docs/Mozilla/Firefox_OS">{{ _('Build<br />Firefox OS') }}</a>
+    <a href="/en-US/docs/Mozilla/Firefox_OS"><span>{{ _('Build<br />Firefox OS') }}</span><i></i></a>
   </div>
 </div></div>
 
