--- a/media/redesign/stylus/structure.styl
+++ b/media/redesign/stylus/structure.styl
@@ -9,11 +9,10 @@
 
   .logo
     @extend .text-offscreen
-    width 114px
-    height 26px
-    background url('/media/redesign/img/temporary-logo.png') 0 0 no-repeat
+    width 216px
+    height 54px
+    background url('/media/redesign/img/mdn_logo-wordmark-full_color.svg') 0 0 no-repeat
     display block
-    margin-top 20px
     float left
 
 #main-nav
