Implement new logos

--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -11,7 +11,7 @@
     background-color #175c9f
 
     .logo
-      background url('/media/redesign/img/mdn_logo-wordmark-full_white.svg') 0 0 no-repeat #fff
+      background url('/media/redesign/img/mdn_logo-wordmark-full_white.svg') 0 0 no-repeat
 
   /* update main nav menu color */
   override-main-nav-color(#fff)
@@ -50,6 +50,10 @@
         width 60%
         margin 0 auto
         font-size larger-font-size
+        background rgba(255, 255, 255, 0.2)
+        color #fff
+        border 0
+        border-radius 3px
 
   .home-features
     &, a
@@ -60,6 +64,7 @@
 
     h3
       font-weight bold
+      font-size larger-font-size
 
     li
       border-bottom 1px solid rgba(255, 255, 255, 0.1)
