Tablet and Mobile updates to homepage

--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -284,6 +284,23 @@
           i
             right auto
 
+
+/* mobile */
+@media media-query-mobile
+  #home
+
+    .home-masthead
+      h1, input
+        width 100%
+
+        span
+          padding-left 0
+
+    .column-callout, .column-involved, .column-home-features
+      width auto !important
+      float none
+      margin-bottom grid-spacing
+
 /* right to left */
 #home.html-rtl
     .column-callout
