--- a/media/redesign/stylus/zones.styl
+++ b/media/redesign/stylus/zones.styl
@@ -5,9 +5,12 @@
 .zone
   #main-header, .zone-article-header
     create-gradient-background(#0095dd)
-  
+
   #main-header
     border-bottom-color rgba(255, 255, 255, 0.2)
+
+    .logo
+      background url('/media/redesign/img/mdn_logo-wordmark-full_white.svg') 0 0 no-repeat
 
   override-main-nav-color(#fff)
 
