Fix contribute card margin

--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -178,7 +178,6 @@
       margin-bottom (grid-spacing / 2)
 
     .home-involved-card
-      background #f4f7f8
 
       a
         color #fff
@@ -201,7 +200,7 @@
         padding-bottom (grid-spacing / 2)
         border-bottom 1px solid #e0e2e4
         margin-bottom 110px
-        margin-right -gridspacing
+        margin-right -(grid-spacing)
         font-weight bold
         font-size larger-font-size
 
