Token updates to Profile page CSS to make that section roughly fit our redesign.

--- a/apps/devmo/templates/devmo/profile_edit.html
+++ b/apps/devmo/templates/devmo/profile_edit.html
@@ -9,6 +9,7 @@
 {% block site_css %}
     {{ super() }}
     {{ css('demostudio') }}
+    {% if waffle.flag('redesign') %}{{ css('redesign-profile') }}{% endif %}
 {% endblock %}
 
 {% block site_js %}
