--- a/apps/devmo/templates/devmo/profile.html
+++ b/apps/devmo/templates/devmo/profile.html
@@ -12,6 +12,7 @@
 {% block site_css %}
     {{ super() }}
     {{ css('demostudio') }}
+    {% if waffle.flag('redesign') %}{{ css('redesign-profile') }}{% endif %}
 {% endblock %}
 
 {% block site_js %}
@@ -91,12 +92,12 @@
       <p class="edit">
           {% if show_manage_roles_button %}
               {# TODO: Need a method to detect whether the logged in user can manage any roles, here #}
-              <a href="{{ url('teamwork.views.user_roles', profile.user.username) }}" class="button">{{_("Manage Roles")}}</a>
+              <a href="{{ url('teamwork.views.user_roles', profile.user.username) }}" class="button neutral">{{_("Manage Roles")}}</a>
           {% endif %}
           <!-- Only shown for the user and admins -->
           {% if profile.allows_editing_by(request.user) %}
-              <a href="{{ url('authkeys.list') }}" class="button">{{_("Manage API Keys")}}</a>
-              <a id="edit-profile" href="{{ url('devmo.views.profile_edit', username=profile.user.username) }}" class="button">{{_("Edit Profile")}}</a>
+              <a href="{{ url('authkeys.list') }}" class="button neutral">{{_("Manage API Keys")}}</a>
+              <a id="edit-profile" href="{{ url('devmo.views.profile_edit', username=profile.user.username) }}" class="button neutral">{{_("Edit Profile")}}</a>
           {% endif %}
           {{ ban_link(profile.user, request.user) }}
       </p>
