Adding proper placeholder color for WebKit

--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -58,6 +58,11 @@
         border 0
         border-radius 3px
 
+        &::-webkit-input-placeholder
+          color #fff
+        &::-moz-input-placeholder
+          color #fff
+
   .home-features
     &, a
       color #fff
