--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -3,7 +3,7 @@
 @import 'grid'
 
 #home
-  create-home-gradient-background(#3a6ab4)
+  create-home-gradient-background(#00539f)
 
   /* general structure adjustments */
   #main-header
