--- a/media/redesign/stylus/demo-studio.styl
+++ b/media/redesign/stylus/demo-studio.styl
@@ -14,11 +14,8 @@
       .logo
         background url('/media/redesign/img/mdn_logo-wordmark-full_white.svg') 0 0 no-repeat
 
-      .search-wrap
-        background-color rgba(255, 255, 255, 0.2)
-
-        &, input, .search-trigger
-          color #fff !important
+      .main-nav-search
+        display none
 
 
   /* remove ugly button styles */
