--- a/apps/wiki/templates/wiki/includes/document_content_redesign.html
+++ b/apps/wiki/templates/wiki/includes/document_content_redesign.html
@@ -16,6 +16,7 @@
 {% set tags = document.tags.all() %}
 {% set attachments = document.attachments.all() %}
 {% set num_attachments = attachments|length %}
+{% set num_tags = tags|length %}
 {% set is_logged_in = request.user.is_authenticated() %}
 {% set disabled_class = ('disabled' if not is_logged_in else '') %}
 {% set disabled_attr = ('title="%s"' % _('Please log in to use this feature.') if not is_logged_in else '') %}
@@ -37,13 +38,19 @@
 {% endif %}
 
 {% set show_left = zone_subnav_html or quick_links_html or approvals_html %}
-{% set show_right = (not is_zone_root and (toc_html or tags|length or num_attachments)) %}
+{% set show_right = (not is_zone_root and (toc_html or num_tags or num_attachments)) %}
 
 {% set content_class = 'column-all' %}
 {% if show_left and show_right %}
   {% set content_class = 'column-half' %}
 {% elif show_left or show_right %}
   {% set content_class = 'column-main' %}
+{% endif %}
+
+{% if not document.is_template %}
+  {% set document_html_safe = document_html|section_hide(zone_subnav_section_id, quick_links_section_id)|safe %}
+{% else %}
+  {% set document_html_safe = document_html|safe %}
 {% endif %}
 
 {% if is_zone %}
@@ -154,39 +161,32 @@
         {% if show_right %}
           <!-- TOC, approvals, etc -->
           <div class="column-strip wiki-column" id="wiki-right">
-          {% if toc_html %}
-          <!-- table of contents -->
-          <div id="toc" class="toc toggleable">
-            <a href="#toc" class="title toggler">{{ _('In This Article') }}<i></i></a>
-            <ol class="toggle-container">
-              {{ toc_html|safe }}
-            </ol>
+            {% if toc_html %}
+            <!-- table of contents -->
+            <div id="toc" class="toc toggleable">
+              <a href="#toc" class="title toggler">{{ _('In This Article') }}<i></i></a>
+              <ol class="toggle-container">
+                {{ toc_html|safe }}
+              </ol>
+            </div>
+            {% endif %}
+  
+            {% if num_tags %}
+            <!-- tags if present -->
+            <div class="tag-attach-list tags">
+              <i class="icon-tags"></i>
+              <ul class="tag-list">{% for tag in tags %}<li><a href="{{url('wiki.tag', tag.name)}}">{{ tag.name }}</a></li>{% endfor %}</ul>
+            </div>
+            {% endif %}
+  
+            {% if num_attachments %}
+            <!-- attachment list, if present -->
+            <div class="tag-attach-list attachments">
+              <i class="icon-paper-clip"></i>
+              <a href="#page-attachments">{{ _('%s Attachment%s' % (num_attachments, 's' if num_attachments > 1 else '')) }}</a>
+            </div>
+            {% endif %}
           </div>
-          {% endif %}
-
-          {% if tags|length %}
-          <!-- tags if present -->
-          <div class="tag-attach-list tags">
-            <i class="icon-tags"></i>
-            <ul class="tag-list">{% for tag in tags %}<li><a href="{{url('wiki.tag', tag.name)}}">{{ tag.name }}</a></li>{% endfor %}</ul>
-          </div>
-          {% endif %}
-
-          {% if num_attachments %}
-          <!-- attachment list, if present -->
-          <div class="tag-attach-list attachments">
-            <i class="icon-paper-clip"></i>
-            <a href="#page-attachments">{{ _('%s Attachment%s' % (num_attachments, 's' if num_attachments > 1 else '')) }}</a>
-          </div>
-          {% endif %}
-          </div>
-        {% endif %}
-
-        <!-- just the article content -->
-        {% if not document.is_template %}
-          {% set document_html_safe = document_html|section_hide(zone_subnav_section_id, quick_links_section_id)|safe %}
-        {% else %}
-          {% set document_html_safe = document_html|safe %}
         {% endif %}
 
         <!-- center: main article content -->
