--- a/apps/wiki/templates/wiki/preview.html
+++ b/apps/wiki/templates/wiki/preview.html
@@ -1,4 +1,3 @@
-
 {# vim: set ts=2 et sts=2 sw=2: #}
 
 {% extends "wiki/base.html" %}
@@ -7,34 +6,58 @@
 {% block bodyclass %}document{% endblock %}
 
 {% block content %}
-<section id="content">
-  <div class="wrap">
-  	
-    <div id="content-main" class="full">
-    	
-      {% if kumascript_errors %}
-	    {% include 'wiki/includes/kumascript_errors.html' %}
-	  {% endif %}
-    	
-      <div class="warning review-technical">
-  		<p>{{ _('This is a preview of an unsaved document.') }}</p>
-  	  </div>
-    	
-      <article class="article" role="main">
-      <header id="article-head">
-        <div class="title">
-            <h1 class="page-title">{{ title }}</h1>
+
+  {% if waffle.flag('redesign') %}
+    
+    <div class="wiki-main-content"><div class="center">
+      
+      <div class="document-head">
+        <h1>{{ title }}</h1>
+      </div>
+      
+      <!-- TODO:  GET THESE VARIABLES! -->
+      <div id="wiki-column-container" class="{% if not show_right %}wiki-right-closed{% endif %} {% if not show_left %}wiki-left-closed{% endif %}">
+        
+        
+      </div>
+      
+    </div></div>
+  
+  
+  
+  {% else %}
+    
+    <section id="content">
+      <div class="wrap">
+        
+        <div id="content-main" class="full">
+            
+          {% if kumascript_errors %}
+            {% include 'wiki/includes/kumascript_errors.html' %}
+          {% endif %}
+            
+          <div class="warning review-technical">
+            <p>{{ _('This is a preview of an unsaved document.') }}</p>
+          </div>
+            
+          <article class="article" role="main">
+          <header id="article-head">
+            <div class="title">
+              <h1 class="page-title">{{ title }}</h1>
+            </div>
+          </header>
+          
+           <div id="wikiArticle" class="page-content boxed">
+                {{ content|safe }}
+           </div>
+          
+          </article>
         </div>
-      </header>
-      
-       <div id="wikiArticle" class="page-content boxed">
-       		{{ content|safe }}
-       </div>
-      
-  	  </article>
-    </div>
-  </div>
-</section>
+      </div>
+    </section>
+  
+  {% endif %}
+
 {% endblock %}
 
 {% block breadcrumbs %}
