--- a/apps/wiki/templates/wiki/includes/document_content_redesign.html
+++ b/apps/wiki/templates/wiki/includes/document_content_redesign.html
@@ -1,4 +1,4 @@
-{% from "wiki/includes/document_macros.html" import build_document_crumbs, get_document_quick_links, get_document_buttons, get_document_subnav, get_approvals_html, document_watch with context %}
+{% from "wiki/includes/document_macros.html" import build_document_crumbs, get_document_quick_links, get_document_buttons, get_document_subnav, get_approvals_html, get_right_column, document_watch with context %}
 
 {% if document.parent %}
   {# If there is a parent doc, use it for translating. #}
@@ -159,34 +159,7 @@
       <div class="column-container column-container-reverse">
 
         {% if show_right %}
-          <!-- TOC, approvals, etc -->
-          <div class="column-strip wiki-column" id="wiki-right">
-            {% if toc_html %}
-            <!-- table of contents -->
-            <div id="toc" class="toc toggleable">
-              <a href="#toc" class="title toggler">{{ _('In This Article') }}<i></i></a>
-              <ol class="toggle-container">
-                {{ toc_html|safe }}
-              </ol>
-            </div>
-            {% endif %}
-  
-            {% if num_tags %}
-            <!-- tags if present -->
-            <div class="tag-attach-list tags">
-              <i class="icon-tags"></i>
-              <ul class="tag-list">{% for tag in tags %}<li><a href="{{url('wiki.tag', tag.name)}}">{{ tag.name }}</a></li>{% endfor %}</ul>
-            </div>
-            {% endif %}
-  
-            {% if num_attachments %}
-            <!-- attachment list, if present -->
-            <div class="tag-attach-list attachments">
-              <i class="icon-paper-clip"></i>
-              <a href="#page-attachments">{{ _('%s Attachment%s' % (num_attachments, 's' if num_attachments > 1 else '')) }}</a>
-            </div>
-            {% endif %}
-          </div>
+        {{ get_right_column(toc_html, tags, num_attachments) }}
         {% endif %}
 
         <!-- center: main article content -->
