--- a/apps/wiki/templates/wiki/includes/document_macros.html
+++ b/apps/wiki/templates/wiki/includes/document_macros.html
@@ -143,3 +143,34 @@
     {% endif %}
   {% endif %}
 {%- endmacro %}
+
+{% macro get_right_column(toc_html, tags, num_attachments) %}
+  <!-- TOC, approvals, etc -->
+  <div class="column-strip wiki-column" id="wiki-right">
+    {% if toc_html %}
+    <!-- table of contents -->
+    <div id="toc" class="toc toggleable">
+      <a href="#toc" class="title toggler">{{ _('In This Article') }}<i></i></a>
+      <ol class="toggle-container">
+        {{ toc_html|safe }}
+      </ol>
+    </div>
+    {% endif %}
+
+    {% if tags|length %}
+    <!-- tags if present -->
+    <div class="tag-attach-list tags">
+      <i class="icon-tags"></i>
+      <ul class="tag-list">{% for tag in tags %}<li><a href="{{url('wiki.tag', tag.name)}}">{{ tag.name }}</a></li>{% endfor %}</ul>
+    </div>
+    {% endif %}
+
+    {% if num_attachments %}
+    <!-- attachment list, if present -->
+    <div class="tag-attach-list attachments">
+      <i class="icon-paper-clip"></i>
+      <a href="#page-attachments">{{ _('%s Attachment%s' % (num_attachments, 's' if num_attachments > 1 else '')) }}</a>
+    </div>
+    {% endif %}
+  </div>
+{%- endmacro %}
