--- a/apps/wiki/templates/wiki/preview.html
+++ b/apps/wiki/templates/wiki/preview.html
@@ -1,5 +1,7 @@
 {# vim: set ts=2 et sts=2 sw=2: #}
 
+{% from "wiki/includes/document_macros.html" import get_right_column %}
+
 {% extends "wiki/base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% set classes = 'document' %}
@@ -8,6 +10,10 @@
 {% block content %}
 
   {% if waffle.flag('redesign') %}
+    
+    
+    {% set show_right = (not is_zone_root and (toc_html or num_tags or num_attachments)) %}
+
     
     <div class="wiki-main-content"><div class="center">
       
