--- a/media/redesign/stylus/vars.styl
+++ b/media/redesign/stylus/vars.styl
@@ -22,8 +22,15 @@ button-shadow-color = #bbbfc2;
 
 /* grid and site dimensions */
 grid-spacing = 20px;
+
+media-query-small-desktop = 'all and/*!YUI */(max-width: 1220px)';
 media-query-tablet = 'all and/*!YUI */(max-width: 1024px)';
 media-query-mobile = 'all and/*!YUI */(max-width: 768px)';
+
+max-width-default = '1776px';
+max-width-small-desktop = '1220px';
+max-width-tablet = 'none';
+max-width-mobile = 'none';
 
 /* animation */
 default-animation-duration = .5s;
