--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -592,14 +592,15 @@ span.cke_skin_kuma {
 
 
 
+/* Small desktop widths */
+@media media-query-small-desktop {
+
+
+}
+
+
 
 @media media-query-tablet {
-
-  .zone-landing-header-preview {
-    .column-strip, masthead-text {
-      width: 48%;
-    }
-  }
 
   #wiki-right {
     .tag-attach-list {
