--- a/media/redesign/stylus/zones.styl
+++ b/media/redesign/stylus/zones.styl
@@ -183,7 +183,6 @@
 }
 
 
-
 @media media-query-tablet {
   .zone-landing {
       .zone-subnav-container {
@@ -203,9 +202,10 @@
       }
   }
 
-  .zone-landing-header {
+  .zone-landing-header-preview {
+    .column-strip, .masthead-text {
+      width: 48%;
 
-    .masthead-text {
       p {
         margin-right: 0;
       }
